updated Nav component to be hamburger menu on smaller screens.  still working on bug with menu button and how it is displayed on expansion and collapse

--- a/client/src/styles/Feed.css
+++ b/client/src/styles/Feed.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
-  background-color: var(--white);
+  background-color: var(--darkgray);
   color: var(--blue);
   text-align: center;
   justify-content: center;
